# open-case-filing-system

./: .gitignore  Cargo.toml  Dockerfile  FEATURES.md  README.md  database.surql  makefile.toml  postman.json
.devcontainer/: .env  Dockerfile  README  devcontainer.json  docker-compose.yml
.github/: ci.yaml
.github/workflows/: ci.yaml  cii-armv6.yaml  release.yaml  tauri.yaml
.idx/: dev.nix
.sqlx/: query-29d01d64420e53af1cbe08b3723c3ebef2fb7bd4f0ab6759230b50833ae6c27d.json  query-57e49d875ec872f6cbe4b26db849ae4897982f6556a61a68b5aa54d6a450c993.json  query-fe0aadbca4103c0836ce3c59a0dde7e122bcadae2a001b7615da1443cf327f90.json
clusters/apps/docket-api/base/: deployment.yaml  kustomization.yaml  sa.yaml  service.yaml
clusters/apps/docket-api/overlays/dev-cluster/: deployment.yaml  kustomization.yaml
clusters/apps/docket-api/overlays/prod-cluster/: deployment.yaml  kustomization.yaml  namespace.yaml
clusters/apps/docket-api/overlays/stg-cluster/: deployment.yaml  kustomization.yaml
clusters/apps/web/base/: deployment.yaml  kustomization.yaml  kustomize.yaml  sa.yaml  service.yaml
clusters/apps/web/overlays/dev-cluster/: deployment.yaml  ingress.yaml  kustomization.yaml
clusters/apps/web/overlays/prod-cluster/: deployment.yaml  kustomization.yaml
clusters/apps/web/overlays/stg-cluster/: deployment.yaml  kustomization.yaml  namespace.yaml
clusters/core/argocd/base/: argocd-destinationrule.yaml  extensions.yaml  kustomization.yaml
clusters/core/argocd/base/configmap/: argocd-cm.yaml
clusters/core/argocd/overlays/dev-cluster/: kustomization.yaml
clusters/core/argocd/overlays/prod-cluster/: kustomization.yaml
clusters/core/argocd/overlays/stg-cluster/: kustomization.yaml
clusters/core/surrealdb/installation/: kustomization.yaml  surrealdb-with-tikv.yaml
clusters/core/tikv-tidb/operator/: README.md  kustomization.yaml  tidb-operator-helm-with-argocd.yaml
clusters/core/tikv-tidb/tikv-installation/: kustomization.yaml  tikv-for-surrealdb.yaml
clusters/environment/: kustomization.yaml
clusters/environment/applications/: argocd-app-argocd.yaml  argocd-app-other.yaml  argocd-app-surrealdb.yaml  argocd-app-tikv.yaml  argocd-proj-demo.yaml  kustomization.yaml
clusters/environment/appsets/: dev-docket-api.yaml  dev-web.yaml  ocfs.yaml
clusters/environment/kaniko/: kaniko.yaml  pv.yaml
clusters/environment/namespaces/: kustomization.yaml  surrealdb-demo.yaml
clusters/environment/storageclass/: README.md  demo-storageclass.yaml  kustomization.yaml
common/: Cargo.toml  Dockerfile
common/src/: lib.rs
docket-api/: Cargo.toml  Dockerfile  Dockerfile.local
docket-api/.sqlx/: query-eec6249afb9a9d4a25f6039f12d3c9ef7c4b7a8c91b7d5294a900acdb0d688a8.json  query-fcb57b637918b406a64978eca79b20953e5cf446ad7f241aa4f3f8b662fda0a3.json  query-ff0d97ee47ff9a31114e582694283134a7c139b374c112132173998652b77836.json
docket-api/migrations/: 20240125082257_inital.down.sql  20240125082257_inital.up.sql
docket-api/src/: handler.rs  main.rs  model.rs  route.rs  schema.rs
docket-api/src/api/: router.rs
docket-api/src/application/commands/: create_todo_command.rs  delete_todo_command.rs  mod.rs  update_todo_command.rs
docket-api/src/application/commands/requests/: mod.rs
docket-api/src/application/queries/: get_all_todos_query.rs
docket-api/src/infrastructure/data/: mod.rs
docket-api/src/infrastructure/data/db_context/: mod.rs  surreal_context.rs
docket-api/src/infrastructure/data/repositories/: todo_repository.rs
docket-api/tests/: quick_dev.rs
scripts/: README.md  flowchart TD.md  init-pv.sh  init_db.sh  start.sh
surealdb-data/mydatabase.db/: IDENTITY  OPTIONS-000007
web/: Cargo.toml  Dockerfile  Dockerfile.local  config.json
web/src/: main.rs  route.rs
web/src-tauri/: Cargo.toml  tauri.conf.json
