[workspace]
members =  [
    "docket-api",
    "web",
    "common",
     "web/src-tauri"
]
resolver = "2"


[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.


[workspace.dependencies]
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["full"] }