[package]
name = "common"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"
authors = ["Tyler Harpool <tylerharpool@gmail.com>"]
description = "A common library for open case filing system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.5"

