[package]
name = "docket-api"
version = "0.1.0"
edition = "2021"

[build]
target-dir = "/docket-api/target"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.2", features = ["tracing"]}
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid", "time", "migrate"] }
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }


# Utility Crates
anyhow = "1.0.48"
tracing = "0.1.40"

# for OSX this was required, you might need to comment these targets out.
# [target.x86_64-apple-darwin]
# rustflags = [
#   "-C", "link-arg=-undefined",
#   "-C", "link-arg=dynamic_lookup",
# ]

# [target.aarch64-apple-darwin]
# rustflags = [
#   "-C", "link-arg=-undefined",
#   "-C", "link-arg=dynamic_lookup",
# ]