[package]
name = "docket-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"   
authors = ["Tyler Harpool <tylerharpool@gmail.com>"]
description = "A web application for open case filing system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
chrono = { version = "0.4.31", features = ["serde"] }
common = { git = "https://github.com/federal-courts-software-factory/open-case-filing-system.git", version = "0.1.0" }

once_cell = "1.19.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
surrealdb = "1.0.0"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }


