[package]
name = "web"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Harpool <tylerharpool@gmail.com>"]
description = "A web application for open case filing system"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.2", features = ["tracing"]}
dotenv = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "fs"] }

# Importing our own common lib
common = {path = "../common"}


[dev-dependencies]
anyhow = "1.0.48"
httpc-test = "0.1.1"