[package]
name = "web"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Harpool <tylerharpool@gmail.com>"]
description = "A web application for open case filing system"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.2", features = ["tracing"]}
dotenv = "0.15.0"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
# Comment this next line if running docker build locally
#common = {path = "../common"}
# To run locally uncomment this line
common = { git = "https://github.com/federal-courts-software-factory/open-case-filing-system.git", version = "0.1.0" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
askama = "0.12.1"
rand = "0.8.5"

[dev-dependencies]
anyhow = "1.0.48"
httpc-test = "0.1.1"



